# SysCaller

./: CMakeHelp.md  LICENSE  README.md  SysCaller.sln  SysCaller.vcxproj  requirements.txt
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROADMAP.md
.github/workflows/: build.yml
Backups/Hashes/: ignore.txt
Bind/: Bind.sln  Bind.vcxproj  Bind.vcxproj.filters  app.rc  main.cpp  resource.h  resources.qrc  vcpkg.json
Bind/include/Core/Integrity/: Integrity.h
Bind/include/Core/Obfuscation/: IndirectObfuscation.h  Obfuscation.h
Bind/include/Core/Utils/: Common.h  Constants.h  Dependencies.h  PathUtils.h  QtDependencies.h  Utils.h  Version.h
Bind/include/GUI/: Bars.h  Buttons.h  Dialogs.h  MainWindow.h  Panels.h  Settings.h  Themes.h  Threads.h
Bind/include/GUI/Bars/: ProgressBar.h  SettingsTitleBar.h  StatusBar.h  TitleBar.h
Bind/include/GUI/Buttons/: BindButton.h
Bind/include/GUI/Dialogs/: ChangelogDialog.h  ConfirmationDialog.h  HashCompareDialog.h  ObfuscationSelectionDialog.h  SettingsDialog.h  StubMapperDialog.h
Bind/include/GUI/Panels/: LeftPanel.h  OutputPanel.h  RightPanel.h
Bind/include/GUI/Settings/: SettingsDialog.h
Bind/include/GUI/Themes/: Colors.h
Bind/include/GUI/Threads/: CompatibilityThread.h  ObfuscationThread.h  ValidatorThread.h  VerificationThread.h
Bind/src/Core/Obfuscation/: IndirectObfuscation.cpp  Obfuscation.cpp
Bind/src/Core/Utils/: PathUtils.cpp  Utils.cpp
Bind/src/GUI/: MainWindow.cpp
Bind/src/GUI/Bars/: ProgressBar.cpp  SettingsTitleBar.cpp  StatusBar.cpp  TitleBar.cpp
Bind/src/GUI/Buttons/: BindButton.cpp
Bind/src/GUI/Dialogs/: ChangelogDialog.cpp  ConfirmationDialog.cpp  HashCompareDialog.cpp  ObfuscationSelectionDialog.cpp  SettingsDialog.cpp  StubMapperDialog.cpp
Bind/src/GUI/Panels/: LeftPanel.cpp  OutputPanel.cpp  RightPanel.cpp
Bind/src/GUI/Settings/: SettingsDialog.cpp
Bind/src/GUI/Stylesheets/: ChangelogDialog.qss  ConfirmationDialog.qss  HashCompareDialog.qss  ObfuscationSelectionDialog.qss  SettingsDialog.qss  StubMapperDialog.qss
Bind/src/GUI/Threads/: CompatibilityThread.cpp  ObfuscationThread.cpp  ValidatorThread.cpp  VerificationThread.cpp
Bind/src/Res/: app.rc  resource.h  resources.qrc
Bindings/Examples/C/: InjectDLL.c  InjectDLLObf.c  README.md  REPLACE_WITH_SysCaller.dll.txt
Bindings/Examples/CSharp/: InjectDLL.sln  Program.cs  ProgramObf.cs  README.md  REPLACE_WITH_SysCaller.dll.txt
Bindings/Examples/D/: InjectDLL.d  README.md
Bindings/Examples/GO/: InjectDLL.go  InjectDLLObf.go  README.md  REPLACE_WITH_SysCaller.dll.txt
Bindings/Examples/Java/JNA/: .classpath  InjectDLL.java  README.md
Bindings/Examples/Java/JNI/: InjectDLL.java  InjectDLLNative.c  README.md
Bindings/Examples/Julia/: InjectDLL.jl  README.md
Bindings/Examples/LuaJIT/: InjectDLL.lua  README.md
Bindings/Examples/Nim/: InjectDLL.nim  InjectDLLObf.nim  README.md  REPLACE_WITH_SysCaller.dll.txt
Bindings/Examples/Python/: InjectDLL.py  InjectDLLObf.py  PyBindings.py  PyBindingsObf.py  README.md  REPLACE_WITH_SysCaller.dll.txt
Bindings/Examples/Rust/: README.md  REPLACE_WITH_SysCaller.dll.txt  REPLACE_WITH_SysCaller.lib.txt  cargo.toml
Bindings/Examples/Rust/src/: main.rs  mainObf.rs
BuildTools/: syscaller.py
BuildTools/Compatibility/: compatibility.py
BuildTools/Default/: sysFunctions.h  sysNtFunctions.h  syscaller.asm
BuildTools/GUI/: __init__.py  settings.py  syscaller.py  sysgui.py  syssettings.py
BuildTools/GUI/components/: __init__.py  button.py  left_panel.py  output.py  progress_bar.py  right_panel.py  status_bar.py  title_bar.py
BuildTools/GUI/components/bars/: progress_bar.py  status_bar.py  title_bar.py
BuildTools/GUI/components/buttons/: button.py
BuildTools/GUI/components/panels/: left_panel.py  (+2 more)
BuildTools/GUI/settings/: __init__.py  general_tab.py  integrity.py  obfuscation_tab.py  settings_dialog.py  utils.py
BuildTools/GUI/threads/: __init__.py  syscaller_thread.py
BuildTools/GUI/utils/: __init__.py  dll_path.py
BuildTools/History/: CHANGELOG_1.0.0.md
BuildTools/Integrity/Compatibility/: compatibility.py
BuildTools/Integrity/Validator/: validator.py
BuildTools/Integrity/Verify/: verify.py
BuildTools/Protection/: __init__.py  encryptor.py  junkgen.py  namer.py  protection.py  stub_mapper.py  stubgen.py  sysobfuscate.py
BuildTools/Protection/encryption/: encryptor.py
BuildTools/Protection/mapping/: stub_mapper.py
BuildTools/Protection/stub/: junkgen.py  namer.py  stubgen.py
BuildTools/Validator/: validator.py
BuildTools/Verify/: sysverify.py
Default/: SysCaller.asm  SysFunctions.h  SysFunctionsK.h  SysKFunctions.h  sysFunctions.h  sysFunctions_k.h  syscaller.asm
Examples/: getProcessName.cpp  openProcess.cpp
History/: CHANGELOG_1.0.0.md  CHANGELOG_1.1.0.md  CHANGELOG_1.2.0.md  CHANGELOG_1.3.0.md  CHANGELOG_1.3.1.md  CHANGELOG_1.3.2.md
SysCaller/: SysCaller.vcxproj  SysCaller.vcxproj.filters
SysCaller/Wrapper/: CMakeLists.txt
SysCaller/Wrapper/include/: SysCaller.h  SysCallerConfig.h  syscaller.h  syscaller_config.h
SysCaller/Wrapper/include/Resolver/: PebUtils.h  Resolver.h  ResolverBase.h
SysCaller/Wrapper/include/Resolver/Methods/: MemoryExportResolver.h  PebLdrResolver.h
SysCaller/Wrapper/include/Sys/: SysConstants.h  SysExternals.h  SysFunctions.h  SysTypes.h  sysConstants.h  sysExternals.h  sysFunctions.h  sysTypes.h
SysCaller/Wrapper/src/: BuildInfo.cpp  build_info.cpp  dllmain.cpp  syscaller.asm
SysCaller/Wrapper/src/DLL/: DllMain.cpp  dllmain.cpp
SysCaller/Wrapper/src/Resolver/: PebUtils.cpp  Resolver.cpp  ResolverBase.cpp
SysCaller/Wrapper/src/Resolver/Methods/: DiskMappedResolver.cpp  HashedExportResolver.cpp  MemoryExportResolver.cpp  PebLdrResolver.cpp
SysCallerK/: SysCallerK.vcxproj  SysCallerK.vcxproj.filters
SysCallerK/Wrapper/include/: SysCallerK.h  syscaller_k.h
SysCallerK/Wrapper/src/: Dummy.c  dummy.c
Wrapper/include/: syscaller.h
Wrapper/include/Nt/: sysNtConstants.h  sysNtExternals.h  sysNtFunctions.h  sysNtTypes.h
Wrapper/include/Sys/: sysFunctions.h
Wrapper/src/: syscaller.asm
(+88 files in other folders)
